@@ -5,35 +5,36 @@ import com.boanni_back.project.admin.repository.AdminRepository;
 import com.boanni_back.project.auth.entity.Users;
 import com.boanni_back.project.exception.BusinessException;
 import com.boanni_back.project.exception.ErrorCode;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class AdminScoreService {
 
     private final AdminRepository adminRepository;
 
-    public AdminScoreService(AdminRepository adminRepository) {
-        this.adminRepository = adminRepository;
-    }
-
-    public List<AdminScoreDto> getAllUserScores() {
+    //모든 회원의 점수 조회
+    public List<AdminScoreDto.Response> getAllUserScores() {
         return adminRepository.findAll().stream()
-                .map(u -> new AdminScoreDto(u.getId(), u.getUsername(), u.getScore()))
-                .collect(Collectors.toList());
+                .map(AdminScoreDto.Response::fromEntity)
+                .toList();
     }
 
-    public AdminScoreDto getUserScoreById(Long id) {
-        Users users = adminRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 사용자가 없습니다."));
-        return new AdminScoreDto(users.getId(), users.getUsername(), users.getScore());
+    //해당 id 회원의 점수 조회
+    public AdminScoreDto.Response getUserScoreById(Long id) {
+        return adminRepository.findById(id)
+                .map(AdminScoreDto.Response::fromEntity)
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND, id));
     }
 
-    public List<AdminScoreDto> getScoresSortedDesc() {
+    //점수 내림차순 조회
+    public List<AdminScoreDto.Response> getScoresSortedDesc() {
         return adminRepository.findAllByOrderByScoreDesc().stream()
-                .map(u -> new AdminScoreDto(u.getId(), u.getUsername(), u.getScore()))
-                .collect(Collectors.toList());
+                .map(AdminScoreDto.Response::fromEntity)
+                .toList();
     }
 }
